--- a/GosperCoding/Compression.csproj
+++ b/GosperCoding/Compression.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{01B52CD6-A2EB-4E19-9751-BAE7704D464B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gosper索引实验</RootNamespace>
-    <AssemblyName>Gosper索引实验</AssemblyName>
+    <RootNamespace>Compression</RootNamespace>
+    <AssemblyName>GosperCoding</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
