Modify icon display error

--- a/GosperCoding/Compression.csproj
+++ b/GosperCoding/Compression.csproj
@@ -147,7 +147,7 @@
     <EmbeddedResource Include="GenerateGosperCurve.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AccuracyLossStatisticsLossyCompression.bmp" />
+    <EmbeddedResource Include="AccuracyLossStatistics.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
